--- a/academia-hugo/config/_default/params.toml
+++ b/academia-hugo/config/_default/params.toml
@@ -15,7 +15,7 @@ font = "classic"
 description = "Akshay Joshi [Universität des Saarlandes] Research Portfolio"
 
 # Default image for social sharing and search engines. Place image in `static/img/` folder and specify image name here.
-sharing_image = "akshay_1.png"
+sharing_image = "logo.png"
 
 # Twitter username (without @). Used when a vistor shares your site on Twitter.
 twitter = "AkshayJoshi56"
