--- a/academia-hugo/config/_default/config.toml
+++ b/academia-hugo/config/_default/config.toml
@@ -5,7 +5,7 @@
 # Each configuration section is defined by a name in square brackets (e.g. `[outputs]`).
 
 # Title of your site
-title = "Akshay Joshi - Universität des Saarlandes"
+title = "Akshay Joshi"
 
 # The URL of your site.
 # End your URL with a `/` trailing slash, e.g. `https://example.com/`.
