--- a/academia-hugo/config/_default/config.toml
+++ b/academia-hugo/config/_default/config.toml
@@ -9,14 +9,14 @@ title = "Akshay Joshi"
 
 # The URL of your site.
 # End your URL with a `/` trailing slash, e.g. `https://example.com/`.
-baseURL = "https://akshayjoshi.tech/"
+baseURL = "https://akjo.tech/"
 
 # Enter a copyright notice to display in the site footer.
 # To display a copyright symbol, type `&copy;`. For current year, type `{year}`.
 copyright = "Copyright &copy; {year}"
 
 # Enable analytics by entering your Google Analytics tracking ID
-googleAnalytics = "UA-178118763-1"
+googleAnalytics = ""
 
 # Enable comments by entering your Disqus shortname
 disqusShortname = ""
