--- a/academia-hugo/config/_default/params.toml
+++ b/academia-hugo/config/_default/params.toml
@@ -51,14 +51,14 @@ time_format = "3:04 PM"
 
 # Enter contact details (optional). To hide a field, clear it to "".
 email = "akshayjoshi56@gmail.com"
-phone = "+49 157 5819 3860"
-address = "Studentenwohnheim Waldhausweg 15, 66123, Saarbrücken, Germany."
+phone = "+49 155 661 76540"
+address = "Am Kartoffelgarten 14, 81671, Munich, Germany"
 
 # Office hours: use `<br>` to insert a line break, or set to "" to remove office hours
-office_hours = """Monday - Friday: 10:00 to 17:00"""
+office_hours = """Monday - Friday: 09:00 to 17:00"""
 
 # Enter an optional link for booking appointments (e.g. calendly.com).
-appointment_url = "mailto:akjoshi@inf.ethz.ch"
+appointment_url = "mailto:akshayjoshi56@gmail.com"
 
 # Contact links
 #   Set to `[]` to disable, or comment out unwanted lines with a hash `#`.
@@ -88,8 +88,8 @@ contact_links = [
 #   3: OpenStreetMap (Mapbox)
 map = 2
 map_api_key = "AIzaSyBu5nZKbeK-WHQ70oqOWo-_4VmwOwKP9YQ"
-latitude = "49.244821"
-longitude = "7.021490"
+latitude = "48.123315"
+longitude = "11.607344"
 zoom = 15
 
 ############################
