--- a/academia-hugo/config.toml
+++ b/academia-hugo/config.toml
@@ -9,7 +9,7 @@ title = "Akshay Joshi"
 
 # The URL of your site.
 # End your URL with a `/` trailing slash, e.g. `https://example.com/`.
-baseURL = "https://www.linkedin.com/in/akshayjoshi56/"
+baseURL = "https://www.linkedin.com/in/akkshayjoshii/"
 
 # Enter a copyright notice to display in the site footer.
 # To display a copyright symbol, type `&copy;`. For current year, type `{year}`.
