--- a/academia-hugo/config/_default/params.toml
+++ b/academia-hugo/config/_default/params.toml
@@ -58,7 +58,7 @@ address = "Am Kartoffelgarten 14, 81671, Munich, Germany"
 office_hours = """Monday - Friday: 09:00 to 17:00"""
 
 # Enter an optional link for booking appointments (e.g. calendly.com).
-appointment_url = "mailto:akshayjoshi56@gmail.com"
+appointment_url = "https://calendly.com/akjoshi/meeting"
 
 # Contact links
 #   Set to `[]` to disable, or comment out unwanted lines with a hash `#`.
