Added photography tab to navigation bar

--- a/academia-hugo/config/_default/menus.toml
+++ b/academia-hugo/config/_default/menus.toml
@@ -34,6 +34,11 @@
   weight = 50
 
 [[main]]
+  name = "Photography"
+  url = "#photography"
+  weight = 55
+
+[[main]]
   name = "Contact"
   url = "#contact"
   weight = 60
