--- a/netlify.toml
+++ b/netlify.toml
@@ -85,11 +85,11 @@
   status = 301
   force = true
 
-[[redirects]]
-  from = "https://ocr.akjo.tech/*"
-  to = "http://35.225.38.189:10000/:splat"
-  status = 200
-  force = true
+# [[redirects]]
+#   from = "https://ocr.akjo.tech/*"
+#   to = "http://35.225.38.189:10000/:splat"
+#   status = 200
+#   force = true
 
 [[redirects]]
   from = "https://mystuff.akjo.tech/*"
